--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,11 @@
         "graphaware/neo4j-php-client": "^4.8"
     },
     "autoload": {
-        "files": ["src/utils.php"]
+        "files": ["src/format.php"]
+    },
+    "require-dev": {
+        "phpspec/phpspec": "^4.3",
+        "docteurklein/funk-spec": "^0.1.2",
+        "peridot-php/leo": "^1.6"
     }
 }
